# openapi.yaml
@@ -122,6 +122,163 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/GetFacilityResponse'
+  /api/v1/facility/{facilityId}/automations:
+    get:
+      tags:
+      - Customer
+      summary: Lists a facility's automations.
+      operationId: listAutomations
+      parameters:
+      - name: facilityId
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int64
+      responses:
+        "200":
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ListAutomationsResponsePayload'
+        "404":
+          description: The facility does not exist or is not accessible.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SimpleErrorResponsePayload'
+    post:
+      tags:
+      - Customer
+      summary: Creates a new automation at a facility.
+      operationId: createAutomation
+      parameters:
+      - name: facilityId
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int64
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ModifyAutomationRequestPayload'
+        required: true
+      responses:
+        "200":
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CreateAutomationResponsePayload'
+        "404":
+          description: The facility does not exist or is not accessible.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SimpleErrorResponsePayload'
+  /api/v1/facility/{facilityId}/automations/{automationId}:
+    get:
+      tags:
+      - Customer
+      summary: Gets information about a single automation.
+      operationId: getAutomation
+      parameters:
+      - name: facilityId
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int64
+      - name: automationId
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int64
+      responses:
+        "200":
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GetAutomationResponsePayload'
+        "404":
+          description: The requested resource was not found.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SimpleErrorResponsePayload'
+    put:
+      tags:
+      - Customer
+      summary: Updates an existing automation.
+      operationId: updateAutomation
+      parameters:
+      - name: facilityId
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int64
+      - name: automationId
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int64
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ModifyAutomationRequestPayload'
+        required: true
+      responses:
+        "200":
+          description: The requested operation succeeded.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SimpleSuccessResponsePayload'
+        "404":
+          description: The requested resource was not found.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SimpleErrorResponsePayload'
+    delete:
+      tags:
+      - Customer
+      summary: Deletes an automation from a facility.
+      operationId: deleteAutomation
+      parameters:
+      - name: facilityId
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int64
+      - name: automationId
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int64
+      responses:
+        "200":
+          description: The requested operation succeeded.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SimpleSuccessResponsePayload'
+        "404":
+          description: The requested resource was not found.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SimpleErrorResponsePayload'
   /api/v1/facility/{facilityId}/devices:
     get:
       tags:
@@ -2370,6 +2527,28 @@ components:
             type: array
             items:
               $ref: '#/components/schemas/SearchNodePayload'
+    AutomationPayload:
+      required:
+      - facilityId
+      - id
+      - name
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        facilityId:
+          type: integer
+          format: int64
+        name:
+          type: string
+          description: Short human-readable name of this automation.
+        description:
+          type: string
+          description: Human-readable description of this automation.
+        configuration:
+          type: object
+          description: Client-defined configuration data for this automation.
     CRS:
       required:
       - properties
@@ -2500,6 +2679,17 @@ components:
       properties:
         accession:
           $ref: '#/components/schemas/AccessionPayload'
+        status:
+          $ref: '#/components/schemas/SuccessOrError'
+    CreateAutomationResponsePayload:
+      required:
+      - id
+      - status
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
         status:
           $ref: '#/components/schemas/SuccessOrError'
     CreateDeviceRequestPayload:
@@ -3264,6 +3454,16 @@ components:
           $ref: '#/components/schemas/AccessionPayload'
         status:
           $ref: '#/components/schemas/SuccessOrError'
+    GetAutomationResponsePayload:
+      required:
+      - automation
+      - status
+      type: object
+      properties:
+        automation:
+          $ref: '#/components/schemas/AutomationPayload'
+        status:
+          $ref: '#/components/schemas/SuccessOrError'
     GetCurrentTimeResponsePayload:
       required:
       - currentTime
@@ -3452,6 +3652,18 @@ components:
           type: object
           additionalProperties:
             $ref: '#/components/schemas/AllFieldValuesPayload'
+        status:
+          $ref: '#/components/schemas/SuccessOrError'
+    ListAutomationsResponsePayload:
+      required:
+      - automations
+      - status
+      type: object
+      properties:
+        automations:
+          type: array
+          items:
+            $ref: '#/components/schemas/AutomationPayload'
         status:
           $ref: '#/components/schemas/SuccessOrError'
     ListDeviceConfigsResponse:
@@ -3713,6 +3925,17 @@ components:
             $ref: '#/components/schemas/SpeciesDetails'
         status:
           $ref: '#/components/schemas/SuccessOrError'
+    ModifyAutomationRequestPayload:
+      required:
+      - name
+      type: object
+      properties:
+        name:
+          type: string
+        description:
+          type: string
+        configuration:
+          type: object
     MultiLineString:
       required:
       - coordinates
